refactor(index.html)- Refatoração das info

--- a/index.html
+++ b/index.html
@@ -61,9 +61,15 @@
                     <span class="empresa-titulo">Estagiário Desenvolvimento de Sistemas</span>
                     <p class="empresa-texto">Responsável por elaborar macros para sistematizar as atividades do setor, Auxiliar as áreas comerciais da empresa resolvendo problemas do sistema ERP utilizado nelas, Realizar o preenchimento de Planilhas e relatórios do setor, Verificar erros de programação, Auxiliar na configuração de aplicativos de bases de dados: instalação, configuração, serviços e monitoramento (E-mail, Office, ERP e software de clientes), Auxiliar na leitura e criação de documentação técnica, Acompanhar o desenvolvimento de novos sistemas.</p>
                     <ul class="empresa-habilidades">
-                        <li>Framework Angular</li>
+                        <li>Angular</li>
+                        <li>Capacitor</li>
+                        <li>HTML/CSS</li>
+                        <li>Typescript</li>
+                        <li>PO-UI</li>
                         <li>Linguagem ADVPL</li>
                         <li>Protheus</li>
+                        <li>Git</li>
+                        <li>SQL Server</li>
                     </ul>
                 </div>
                 <div class="empresa">
@@ -72,7 +78,10 @@
                     <span class="empresa-titulo">Auxiliar Desenvolvimento de Sistemas</span>
                     <p class="empresa-texto">Responsável pelo desenvolvimento de aplicações utilizando Angular e a biblioteca PO-UI no front-end, garantindo interfaces dinâmicas e responsivas. No back-end, atua com API Rest Protheus em ADVPL/Tlpp, assegurando integração eficiente com sistemas de gestão. Possui experiência em consultas e manipulação de dados no SQL Server, além de realizar controle de versionamento e colaboração de código por meio do Git.</p>
                     <ul class="empresa-habilidades">
-                        <li>Framework Angular</li>
+                        <li>Angular</li>
+                        <li>Capacitor</li>
+                        <li>HTML/CSS</li>
+                        <li>Typescript</li>
                         <li>PO-UI</li>
                         <li>Linguagem ADVPL</li>
                         <li>Protheus</li>
@@ -119,7 +128,6 @@
                                 <li>Hotmart com Paulo Bindo - Protheus com PO UI na Prática <span>Concluído</span></li>
                             </ul>
                         </div>
-    
                         <div class="idiomas">
                             <h3>Idiomas</h3>
                             <ul>
